[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "interview-trainer-agent"
version = "0.1.0"
description = "AI-powered interview coaching platform"
requires-python = ">=3.11"

dependencies = [
    # Backend
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pydantic[email]",
    "sqlalchemy>=2.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "ibm-watsonx-ai>=1.1",
    "pymupdf>=1.24",
    "httpx>=0.27",
    "chromadb>=0.5",
    # RAG knowledge base
    "langchain>=0.2",
    "langchain-community>=0.2",
    "langchain-huggingface>=0.1",
    "langchain-chroma>=0.1",
    "sentence-transformers>=3.0",
    # Frontend
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # TestClient
    "anyio>=4",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
